exchango 안내 페이지 개발중..

--- a/about.html
+++ b/about.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Exchango - Smart Currency Converter</title>
-    <!-- Lucide Icons CDN -->
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <link rel="stylesheet" href="./css/about-style.css">
+    <script src="./lib/lucide.js"></script>
+    <link rel="stylesheet" href="./css/common-style.css">
 </head>
 <body>
     <div class="container">
@@ -382,7 +381,7 @@
         </div>
     </div>
 
-    <script src="./js/about-translations.js"></script>
+    <script src="./js/common-translations.js"></script>
     <script>
         // Initialize Lucide icons
         lucide.createIcons();
