--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인정보 처리방침 - Exchango</title>
-    <!-- Lucide Icons CDN -->
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
-    <link rel="stylesheet" href="./css/privacy_policy-style.css">
+    <script src="./lib/lucide.js"></script>
+    <link rel="stylesheet" href="./css/common-style.css">
 </head>
 <body>
     <div class="container">
@@ -248,7 +247,7 @@
         </div>
     </div>
 
-    <script src="./js/privacy_policy-translations.js"></script>
+    <script src="./js/common-translations.js"></script>
 
     <script>
         // Initialize Lucide icons
