exchango 안내 페이지 개발중..

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -229,7 +229,7 @@
                 <p data-i18n="contactContent">
                     If you have any questions about this privacy policy, please contact us at the address below.
                 </p>
-                <a href="mailto:kr.knkim@kakao.com" class="contact-email">kr.knkim@kakao.com</a>
+                <a href="mailto:exchango.app@gmail.com" class="contact-email">exchango.app@gmail.com</a>
             </div>
         </div>
 
