--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             
             <div class="hero-stats">
                 <div class="stat-item">
-                    <span class="stat-number">170+</span>
+                    <span class="stat-number">150+</span>
                     <span class="stat-label" data-i18n="statCurrencies">Supported Currencies</span>
                 </div>
                 <div class="stat-item">
@@ -68,7 +68,7 @@
                 <span class="section-number">2</span>
                 <h2 data-i18n="sectionTitle2">Supported Currencies</h2>
                 <p class="section-subtitle" data-i18n="sectionSubtitle2">
-                    Support for over 170 different currencies worldwide
+                    Support for over 150 different currencies worldwide
                 </p>
             </div>
 
@@ -143,7 +143,7 @@
                     <h3 data-i18n="feature1Title">1. Currency Calculator</h3>
                     <p class="feature-description" data-i18n="feature1Desc">
                         An intuitive smart currency calculator that anyone can easily use. 
-                        Supports over 170 currencies and provides accurate calculation results using exchange rate information. 
+                        Supports over 150 currencies and provides accurate calculation results using exchange rate information.
                         Convert any amount to another currency instantly with just a few simple touches.
                     </p>
                     <div class="feature-details">
@@ -183,9 +183,33 @@
                 </div>
 
                 <div class="feature-card">
-                    <div class="feature-icon"><i data-lucide="trending-up"></i></div>
-                    <h3 data-i18n="feature3Title">3. Today's Exchange Rates</h3>
+                    <div class="feature-icon"><i data-lucide="percent"></i></div>
+                    <h3 data-i18n="feature3Title">3. Tip Calculator</h3>
                     <p class="feature-description" data-i18n="feature3Desc">
+                        Calculate tips easily and accurately for restaurants, taxis, and service industries.
+                        Reflects various countries' tip cultures and ratios to calculate appropriate tips,
+                        and also supports split calculations according to the number of people.
+                    </p>
+                    <div class="feature-details">
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature3Item1">Regional tip culture reflection</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature3Item2">Tip split calculation per person</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature3Item3">Tip calculation history feature</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon"><i data-lucide="trending-up"></i></div>
+                    <h3 data-i18n="feature4Title">4. Today's Exchange Rates</h3>
+                    <p class="feature-description" data-i18n="feature4Desc">
                         Get real-time exchange rate information and fluctuation status of major currencies worldwide at a glance.
                         Exchange rate data is presented through visual charts for intuitive checking,
                         and frequently checked currencies can be registered as favorites for convenient monitoring.
@@ -193,23 +217,23 @@
                     <div class="feature-details">
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature3Item1">Exchange rate status chart provided</span>
+                            <span data-i18n="feature4Item1">Exchange rate status chart provided</span>
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature3Item2">Daily volatility and trend display</span>
+                            <span data-i18n="feature4Item2">Daily volatility and trend display</span>
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature3Item3">Favorites function management</span>
+                            <span data-i18n="feature4Item3">Favorites function management</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="layers"></i></div>
-                    <h3 data-i18n="feature4Title">4. Multi-Currency Calculator</h3>
-                    <p class="feature-description" data-i18n="feature4Desc">
+                    <h3 data-i18n="feature5Title">5. Multi-Currency Calculator</h3>
+                    <p class="feature-description" data-i18n="feature5Desc">
                         A powerful feature that allows you to compare multiple currencies simultaneously with a single input.
                         For example, you can see at once how much 1000 USD is in Korean Won, Japanese Yen, and Euro 
                         on one screen, helping you choose the optimal currency.
@@ -217,19 +241,19 @@
                     <div class="feature-details">
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature4Item1">Multiple currency simultaneous calculation</span>
+                            <span data-i18n="feature5Item1">Multiple currency simultaneous calculation</span>
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature4Item2">Currency comparison analysis</span>
+                            <span data-i18n="feature5Item2">Currency comparison analysis</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="gamepad-2"></i></div>
-                    <h3 data-i18n="feature5Title">5. Games (Ladder & Roulette)</h3>
-                    <p class="feature-description" data-i18n="feature5Desc">
+                    <h3 data-i18n="feature6Title">6. Games (Ladder & Roulette)</h3>
+                    <p class="feature-description" data-i18n="feature6Desc">
                         Fun game features that let you make various decisions with friends.
                         Solve everyday choice dilemmas like choosing travel destinations, deciding lunch menus, or team divisions 
                         through exciting games. Provides both ladder games and roulette games.
@@ -237,75 +261,43 @@
                     <div class="feature-details">
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature5Item1">Classic ladder game</span>
+                            <span data-i18n="feature6Item1">Classic ladder game</span>
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature5Item2">Colorful roulette game</span>
+                            <span data-i18n="feature6Item2">Colorful roulette game</span>
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature5Item3">Custom item settings</span>
+                            <span data-i18n="feature6Item3">Custom item settings</span>
                         </div>
                     </div>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="settings"></i></div>
-                    <h3 data-i18n="feature6Title">6. Base Currency Settings</h3>
-                    <p class="feature-description" data-i18n="feature6Desc">
-                        Set a base currency that matches your personal usage patterns.
-                        By setting frequently used currencies as defaults, you can perform exchange rate calculations
-                        faster and more conveniently without the hassle of selecting currencies every time.
-                    </p>
-                    <div class="feature-details">
-                        <div class="feature-detail-item">
-                            <span class="detail-check">✓</span>
-                            <span data-i18n="feature6Item1">Personal customized base currency settings</span>
-                        </div>
-                        <div class="feature-detail-item">
-                            <span class="detail-check">✓</span>
-                            <span data-i18n="feature6Item2">Quick currency conversion</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="feature-card">
-                    <div class="feature-icon"><i data-lucide="languages"></i></div>
-                    <h3 data-i18n="feature7Title">7. Language Settings</h3>
+                    <h3 data-i18n="feature7Title">7. Various Settings</h3>
                     <p class="feature-description" data-i18n="feature7Desc">
-                        Supports 7 major languages for users worldwide.
-                        Available in Korean, English, Japanese, Chinese, Spanish, French, and German,
-                        with number formatting that reflects the cultural characteristics of each language.
+                        Customize the app according to your personal usage patterns and environment.
+                        Various options including base currency, language, theme, and font size
+                        provide an optimal user experience.
                     </p>
                     <div class="feature-details">
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature7Item1">7 language support</span>
+                            <span data-i18n="feature7Item1">Base currency settings</span>
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature7Item2">Regional number format support</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="feature-card">
-                    <div class="feature-icon"><i data-lucide="palette"></i></div>
-                    <h3 data-i18n="feature8Title">8. Theme Settings</h3>
-                    <p class="feature-description" data-i18n="feature8Desc">
-                        Provides various themes to suit user preferences and environments.
-                        Various options including light and dark themes 
-                        reduce eye fatigue and create a more comfortable user environment.
-                    </p>
-                    <div class="feature-details">
-                        <div class="feature-detail-item">
-                            <span class="detail-check">✓</span>
-                            <span data-i18n="feature8Item1">Light/Dark theme support</span>
+                            <span data-i18n="feature7Item2">Language settings (7 languages support)</span>
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature8Item2">Various color schemes</span>
+                            <span data-i18n="feature7Item3">Theme settings (Light/Dark)</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature7Item4">Font size settings</span>
                         </div>
                     </div>
                 </div>
