--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title data-i18n="pageTitle">Exchango - 스마트 환율 계산기 앱</title>
     <meta name="description" content="전 세계 150개 이상의 통화를 지원하는 스마트 환율 계산기 앱. 환율 계산, 정산, 팁 계산, 미니게임까지 한 번에 해결하세요.">
@@ -368,19 +368,18 @@
                         <p class="download-desc" data-i18n="downloadDesc">150개 이상의 통화를 지원하는 Exchango로 환율 계산을 더 쉽고 정확하게 만들어보세요.</p>
                         
                         <div class="download-buttons">
-                            <a href="#" class="download-btn ios">
-                                <i data-lucide="smartphone"></i>
-                                <div class="download-text">
-                                    <span class="download-store">App Store</span>
-                                    <span class="download-action" data-i18n="downloadiOS">iOS 다운로드</span>
-                                </div>
+                            <!-- App Store Badge -->
+                            <a href="#" class="store-badge app-store-badge">
+                                <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
+                                     alt="Download on the App Store" 
+                                     class="store-badge-img">
                             </a>
-                            <a href="#" class="download-btn android">
-                                <i data-lucide="smartphone"></i>
-                                <div class="download-text">
-                                    <span class="download-store">Google Play</span>
-                                    <span class="download-action" data-i18n="downloadAndroid">Android 다운로드</span>
-                                </div>
+                            
+                            <!-- Google Play Badge -->
+                            <a href="#" class="store-badge google-play-badge">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" 
+                                     alt="Get it on Google Play" 
+                                     class="store-badge-img">
                             </a>
                         </div>
                     </div>
