--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>개인정보 처리방침 - Exchango</title>
     <script src="./lib/lucide.js"></script>
     <link rel="stylesheet" href="./css/common-style.css">
