--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     <div class="footer-section">
                         <h4 data-i18n="footerAbout">Exchango 소개</h4>
                         <ul>
-                            <li><a href="about.html" data-i18n="footerAbout">Exchango 소개</a></li>
+                            <li><a href="index.html" data-i18n="footerAbout">Exchango 소개</a></li>
                             <li><a href="#features" data-i18n="featuresTitle">주요 기능</a></li>
                             <li><a href="#download" data-i18n="downloadTitle">다운로드</a></li>
                         </ul>
@@ -427,9 +427,8 @@
                     <div class="footer-section">
                         <h4 data-i18n="footerSupport">고객 지원</h4>
                         <ul>
-                            <li><a href="#" data-i18n="footerContact">문의하기</a></li>
+                            <li><a href="about.html" data-i18n="footerContact">문의하기</a></li>
                             <li><a href="privacy_policy.html" data-i18n="footerPrivacy">개인정보처리방침</a></li>
-                            <li><a href="#" data-i18n="footerTerms">이용약관</a></li>
                         </ul>
                     </div>
                 </div>
