--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -237,7 +237,7 @@
         <div class="footer">
             <div class="footer-content">
                 <p class="footer-copyright" data-i18n="footerCopyright">
-                    © 2024 Exchango. All rights reserved.
+                    Copyright © 2025 Exchango All rights reserved.
                 </p>
                 <p data-i18n="footerMessage">We will do our best to protect user privacy and security.</p>
                 <p data-i18n="policyChanges" style="margin-top: 20px; font-size: 0.9rem; opacity: 0.8;">
