--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -22,8 +22,16 @@
                 <img src="./assets/app-icon.png" alt="Exchango App Icon" class="app-icon-image">
             </div>
             
-            <h1 data-i18n="pageTitle">Privacy Policy</h1>
-            <p class="tagline" data-i18n="pageSubtitle">User privacy protection is our top priority.</p>
+            <h1 data-i18n="heroTitle">Exchango</h1>
+            <p class="tagline" data-i18n="heroTagline">당신의 스마트 환율 파트너!</p>
+        </div>
+
+        <!-- Privacy Policy Title Section -->
+        <div class="section">
+            <div class="section-center">
+                <h2 class="main-title" data-i18n="pageTitle">개인정보 처리방침</h2>
+                <p class="main-subtitle" data-i18n="pageSubtitle">사용자 개인정보 보호가 우리의 최우선입니다.</p>
+            </div>
         </div>
 
         <!-- Overview Section -->
