--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -230,29 +230,42 @@
             </div>
         </div>
 
-        <!-- Contact Section -->
-        <div class="contact-section">
-            <div class="contact-content">
-                <h3 data-i18n="contactTitle">Contact</h3>
-                <p data-i18n="contactContent">
-                    If you have any questions about this privacy policy, please contact us at the address below.
-                </p>
-                <a href="mailto:exchango.app@gmail.com" class="contact-email">exchango.app@gmail.com</a>
-            </div>
-        </div>
-
         <!-- Footer -->
-        <div class="footer">
-            <div class="footer-content">
-                <p class="footer-copyright" data-i18n="footerCopyright">
-                    Copyright © 2025 Exchango All rights reserved.
-                </p>
-                <p data-i18n="footerMessage">We will do our best to protect user privacy and security.</p>
-                <p data-i18n="policyChanges" style="margin-top: 20px; font-size: 0.9rem; opacity: 0.8;">
-                    This privacy policy may be updated as necessary, and if there are important changes, we will notify you through app updates.
-                </p>
+        <footer class="footer" id="footer">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-brand">
+                        <div class="footer-logo">
+                            <img src="./assets/app-icon.png" alt="Exchango" class="footer-logo-image">
+                            <span class="footer-brand-name">Exchango</span>
+                        </div>
+                        <p class="footer-tagline" data-i18n="heroTagline">전 세계를 위한 스마트 환율 계산기</p>
+                    </div>
+
+                    <div class="footer-links">
+                        <div class="footer-section">
+                            <h4 data-i18n="footerSupport">고객 지원</h4>
+                            <ul>
+                                <li><a href="privacy_policy.html" data-i18n="footerPrivacy">개인정보처리방침</a></li>
+                                <li><a href="#" data-i18n="footerContact" id="contact-link">문의하기</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-bottom">
+                    <p class="copyright" data-i18n="footerCopyright">© 2024 Exchango. 모든 권리 보유.</p>
+
+                    <!-- Language Selector (Footer) -->
+                    <div class="footer-language">
+                        <a href="?lang=en" class="footer-lang-btn">English</a>
+                        <a href="?lang=ko" class="footer-lang-btn">한국어</a>
+                        <a href="?lang=ja" class="footer-lang-btn">日본語</a>
+                        <a href="?lang=zh" class="footer-lang-btn">中文</a>
+                    </div>
+                </div>
             </div>
-        </div>
+        </footer>
     </div>
 
     <script src="./js/common-translations.js"></script>
