--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
                     <div class="footer-section">
                         <h4 data-i18n="footerSupport">고객 지원</h4>
                         <ul>
-                            <li><a href="about.html" data-i18n="footerContact">문의하기</a></li>
-                            <li><a href="privacy_policy_backup.html" data-i18n="footerPrivacy">개인정보처리방침</a></li>
+                            <li><a href="about.html" data-i18n="footerAboutPage">Exchango 소개</a></li>
+                            <li><a href="privacy_policy.html" data-i18n="footerPrivacy">개인정보처리방침</a></li>
                         </ul>
                     </div>
                 </div>
