--- a/about.html
+++ b/about.html
@@ -401,7 +401,7 @@
                         <div class="footer-section">
                             <h4 data-i18n="footerSupport">고객 지원</h4>
                             <ul>
-                                <li><a href="privacy_policy_backup.html" data-i18n="footerPrivacy">개인정보처리방침</a></li>
+                                <li><a href="privacy_policy.html" data-i18n="footerPrivacy">개인정보처리방침</a></li>
                                 <li><a href="#" data-i18n="footerContact" id="contact-link">문의하기</a></li>
                             </ul>
                         </div>
