--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p class="copyright" data-i18n="footerCopyright">© 2024 Exchango. 모든 권리 보유.</p>
+                <p class="copyright" data-i18n="footerCopyright">Copyright © 2025 Exchango All rights reserved.</p>
                 
                 <!-- Language Selector (Footer) -->
                 <div class="footer-language">
