--- a/index.html
+++ b/index.html
@@ -370,14 +370,14 @@
                         <div class="download-buttons">
                             <!-- App Store Badge -->
                             <a href="#" class="store-badge app-store-badge">
-                                <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
+                                <img src="./assets/app_store.svg" 
                                      alt="Download on the App Store" 
                                      class="store-badge-img">
                             </a>
                             
                             <!-- Google Play Badge -->
                             <a href="#" class="store-badge google-play-badge">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" 
+                                <img src="./assets/play_store.svg" 
                                      alt="Get it on Google Play" 
                                      class="store-badge-img">
                             </a>
