디자인 변경 및 이미지 변경

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>About Exchango FX - Smart Currency Converter</title>
+    <title>Exchango FX - About</title>
     <script src="./lib/lucide.js"></script>
 
     <!-- Favicon -->
@@ -36,7 +36,7 @@
                     <span class="stat-label" data-i18n="statCurrencies">Supported Currencies</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">7</span>
+                    <span class="stat-number">14</span>
                     <span class="stat-label" data-i18n="statLanguages">Supported Languages</span>
                 </div>
                 <div class="stat-item">
@@ -323,7 +323,7 @@
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
-                            <span data-i18n="feature8Item2">Language settings (7 languages support)</span>
+                            <span data-i18n="feature8Item2">Language settings (14 languages support)</span>
                         </div>
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
