--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Privacy Policy - Exchango FX</title>
+    <title>Exchango FX - Privacy Policy</title>
     <script src="./lib/lucide.js"></script>
 
     <!-- Favicon -->
