--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Exchango FX - Your Global Currency Companion!">
     <meta property="og:description" content="150개 이상의 통화를 지원하는 올인원 환율 계산 앱">
-    <meta property="og:image" content="./assets/app-icon.png">
+    <meta property="og:image" content="./assets/gp_image.png">
     <meta property="og:url" content="https://exchango.app">
     <meta property="og:type" content="website">
     
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Exchango FX - Your Global Currency Companion!">
     <meta name="twitter:description" content="150개 이상의 통화를 지원하는 올인원 환율 계산 앱">
-    <meta name="twitter:image" content="./assets/app-icon.png">
+    <meta name="twitter:image" content="./assets/gp_image.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/app-icon.png">
