디자인 변경 및 이미지 변경

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Exchango FX - Your Global Currency Companion!">
     <meta property="og:description" content="150개 이상의 통화를 지원하는 올인원 환율 계산 앱">
-    <meta property="og:image" content="./assets/gp_image.png">
+    <meta property="og:image" content="./assets/gp_image.png?1=1">
     <meta property="og:url" content="https://exchango.app">
     <meta property="og:type" content="website">
     
