--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                             <i data-lucide="zap"></i>
                         </div>
                         <h3 data-i18n="performanceTitle">고성능</h3>
-                        <p data-i18n="performanceDesc">React Native와 TypeScript로 구축되어 iOS와 Android에서 네이티브 수준의 성능을 제공합니다.</p>
+                        <p data-i18n="performanceDesc">최신 모바일 기술로 구축되어 iOS와 Android에서 네이티브 수준의 빠른 성능을 제공합니다.</p>
                     </div>
                     
                     <div class="tech-card">
