--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
                             <h3 data-i18n="settingsTitle">설정</h3>
                             <p data-i18n="settingsDesc">개인 취향에 맞게 앱을 설정하세요. 다크/라이트 테마, 언어 설정, 글꼴 크기 조절 등 다양한 커스터마이징 옵션을 제공합니다.</p>
                             <ul class="feature-list">
-                                <li data-i18n="settingsFeature1">다크/라이트 테마</li>
+                                <li data-i18n="settingsFeature1">기본 통화 선택</li>
                                 <li data-i18n="settingsFeature2">14개 언어 지원</li>
-                                <li data-i18n="settingsFeature3">글꼴 크기 조절</li>
+                                <li data-i18n="settingsFeature3">다크/라이트 테마</li>
                             </ul>
                         </div>
                     </div>
