--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <meta name="twitter:title" content="Exchango FX - Your Global Currency Companion!">
     <meta name="twitter:description" content="150개 이상의 통화를 지원하는 올인원 환율 계산 앱">
     <meta name="twitter:image" content="./assets/gp_image.png?1=1">
-    
+
+    <meta name="naver-site-verification" content="c1cca99e024cc5eab5118649e021d2e37e5b0004" />
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/app-icon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/app-icon.png">
