--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -11,6 +11,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/app-icon.png">
 
     <link rel="stylesheet" href="./css/common-style.css">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G05HY8WE79"></script>
+
 </head>
 <body>
     <div class="container">
@@ -450,6 +453,15 @@
     </div>
 
     <script src="./js/common-translations.js"></script>
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-G05HY8WE79');
+    </script>
+
     <script>
         // Initialize Lucide icons
         lucide.createIcons();
