--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G05HY8WE79"></script>
 </head>
 <body>
     <!-- Skip to content for accessibility -->
@@ -535,7 +537,15 @@
     <!-- Scripts -->
     <script src="./js/index-translations.js?v=1.1"></script>
     <script src="./js/index-script.js?v=1.1"></script>
-    
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-G05HY8WE79');
+    </script>
+
     <!-- Initialize Lucide Icons -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
