이미지 최신 버전 업데이트 및 페이지 업데이트

--- a/about.html
+++ b/about.html
@@ -148,9 +148,9 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="wifi-off"></i></div>
-                    <h3 data-i18n="feature1Title">1. Offline Mode</h3>
+                    <h3 data-i18n="feature1Title">Offline Mode</h3>
                     <p class="feature-description" data-i18n="feature1Desc">
-                        Use basic currency calculation features even without internet connection. 
+                        Use basic currency calculation features even without internet connection.
                         Last updated exchange rate data is stored on the device to provide reliable calculation results anytime.
                     </p>
                     <div class="feature-details">
@@ -171,9 +171,9 @@
 
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="calculator"></i></div>
-                    <h3 data-i18n="feature2Title">2. Currency Calculator</h3>
+                    <h3 data-i18n="feature2Title">Currency Calculator</h3>
                     <p class="feature-description" data-i18n="feature2Desc">
-                        An intuitive smart currency calculator that anyone can easily use. 
+                        An intuitive smart currency calculator that anyone can easily use.
                         Supports over 150 currencies and provides accurate calculation results using exchange rate information.
                     </p>
                     <div class="feature-details">
@@ -193,8 +193,30 @@
                 </div>
 
                 <div class="feature-card">
+                    <div class="feature-icon"><i data-lucide="menu"></i></div>
+                    <h3 data-i18n="feature9Title">Intuitive Menu</h3>
+                    <p class="feature-description" data-i18n="feature9Desc">
+                        Access all features easily with a clean and intuitive menu interface. Quickly find and use the features you need.
+                    </p>
+                    <div class="feature-details">
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature9Item1">One-touch quick access</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature9Item2">Organized feature categorization</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature9Item3">User-friendly design</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="receipt"></i></div>
-                    <h3 data-i18n="feature3Title">3. Settlement Function</h3>
+                    <h3 data-i18n="feature3Title">Settlement Function</h3>
                     <p class="feature-description" data-i18n="feature3Desc">
                         Resolve complex multi-currency settlements from overseas travel or international business at once.
                         Automatically calculates amounts paid by multiple people in different currencies to provide fair settlement results.
@@ -217,7 +239,7 @@
 
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="percent"></i></div>
-                    <h3 data-i18n="feature4Title">4. Tip Calculator</h3>
+                    <h3 data-i18n="feature4Title">Tip Calculator</h3>
                     <p class="feature-description" data-i18n="feature4Desc">
                         Calculate tips easily and accurately for restaurants, taxis, and service industries.
                         Reflects various countries' tip cultures and ratios to calculate appropriate tips,
@@ -241,7 +263,7 @@
 
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="trending-up"></i></div>
-                    <h3 data-i18n="feature5Title">5. Today's Exchange Rates</h3>
+                    <h3 data-i18n="feature5Title">Today's Exchange Rates</h3>
                     <p class="feature-description" data-i18n="feature5Desc">
                         Get real-time exchange rate information and fluctuation status of major currencies worldwide at a glance.
                         Exchange rate data is presented through visual charts for intuitive checking,
@@ -265,10 +287,10 @@
 
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="layers"></i></div>
-                    <h3 data-i18n="feature6Title">6. Multi-Currency Calculator</h3>
+                    <h3 data-i18n="feature6Title">Multi-Currency Calculator</h3>
                     <p class="feature-description" data-i18n="feature6Desc">
                         A powerful feature that allows you to compare multiple currencies simultaneously with a single input.
-                        For example, you can see at once how much 1000 USD is in Korean Won, Japanese Yen, and Euro 
+                        For example, you can see at once how much 1000 USD is in Korean Won, Japanese Yen, and Euro
                         on one screen, helping you choose the optimal currency.
                     </p>
                     <div class="feature-details">
@@ -288,11 +310,33 @@
                 </div>
 
                 <div class="feature-card">
+                    <div class="feature-icon"><i data-lucide="archive"></i></div>
+                    <h3 data-i18n="feature10Title">History Management</h3>
+                    <p class="feature-description" data-i18n="feature10Desc">
+                        Systematically manage and organize your calculation history. Bookmark important records and easily delete unnecessary ones.
+                    </p>
+                    <div class="feature-details">
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature10Item1">Swipe to delete easily</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature10Item2">Bookmark important records</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature10Item3">Bulk selection and management</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="gamepad-2"></i></div>
-                    <h3 data-i18n="feature7Title">7. Games (Ladder & Roulette)</h3>
+                    <h3 data-i18n="feature7Title">Games (Ladder & Roulette)</h3>
                     <p class="feature-description" data-i18n="feature7Desc">
                         Fun game features that let you make various decisions with friends.
-                        Solve everyday choice dilemmas like choosing travel destinations, deciding lunch menus, or team divisions 
+                        Solve everyday choice dilemmas like choosing travel destinations, deciding lunch menus, or team divisions
                         through exciting games. Provides both ladder games and roulette games.
                     </p>
                     <div class="feature-details">
@@ -313,7 +357,7 @@
 
                 <div class="feature-card">
                     <div class="feature-icon"><i data-lucide="settings"></i></div>
-                    <h3 data-i18n="feature8Title">8. Various Settings</h3>
+                    <h3 data-i18n="feature8Title">Various Settings</h3>
                     <p class="feature-description" data-i18n="feature8Desc">
                         Customize the app according to your personal usage patterns and environment.
                         Various options including base currency, language, and theme
@@ -331,6 +375,28 @@
                         <div class="feature-detail-item">
                             <span class="detail-check">✓</span>
                             <span data-i18n="feature8Item3">Theme settings (Light/Dark)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon"><i data-lucide="layout-dashboard"></i></div>
+                    <h3 data-i18n="feature11Title">Home Screen Widget</h3>
+                    <p class="feature-description" data-i18n="feature11Desc">
+                        Check exchange rates directly from your home screen. View real-time rates for major currencies at a glance without opening the app.
+                    </p>
+                    <div class="feature-details">
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature11Item1">Real-time rate display</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature11Item2">Various widget sizes</span>
+                        </div>
+                        <div class="feature-detail-item">
+                            <span class="detail-check">✓</span>
+                            <span data-i18n="feature11Item3">Auto-update</span>
                         </div>
                     </div>
                 </div>
