download.html 추가

--- a/download.html
+++ b/download.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Exchango FX - 앱 다운로드</title>
-    <meta name="description" content="전 세계 150개 이상의 통화를 지원하는 스마트 환율 계산기 앱을 다운로드하세요">
-    <meta name="keywords" content="환율, 계산기, 환율계산, 여행, 정산, 팁계산, currency, exchange rate, calculator">
+    <title>Exchango FX - Download App</title>
+    <meta name="description" content="Download the smart currency converter app supporting 150+ currencies worldwide">
+    <meta name="keywords" content="currency, exchange rate, calculator, travel, expense, tip calculator, conversion">
     <meta name="author" content="Exchango FX">
 
     <!-- Smart App Banner for iOS -->
@@ -15,7 +15,7 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Exchango FX - Your Global Currency Companion!">
-    <meta property="og:description" content="150개 이상의 통화를 지원하는 올인원 환율 계산 앱">
+    <meta property="og:description" content="Convert, calculate, and split expenses across 150+ currencies">
     <meta property="og:image" content="./assets/gp_image.png">
     <meta property="og:url" content="https://exchango.app">
     <meta property="og:type" content="website">
