--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
 
     <link rel="stylesheet" href="./css/common-style.css">
 
+    <!-- RSS Feed -->
+    <link rel="alternate" type="application/rss+xml" title="Exchango FX RSS" href="./rss.xml">
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-G05HY8WE79"></script>
 
 </head>
