--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
+
+    <!-- RSS Feed -->
+    <link rel="alternate" type="application/rss+xml" title="Exchango FX RSS" href="./rss.xml">
     <meta name="twitter:title" content="Exchango FX - Your Global Currency Companion!">
     <meta name="twitter:description" content="150개 이상의 통화를 지원하는 올인원 환율 계산 앱">
     <meta name="twitter:image" content="./assets/gp_image.png?1=1">
