--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="msvalidate.01" content="878FBD444F34D28F9D2FC908D2DE2D12" />
     <title>Exchango FX - Privacy Policy</title>
     <script src="./lib/lucide.js"></script>
 
